--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
 			</tr>
 			<tr>
 				<td>Bollinger Bands</td>
-				<td><input type="number" id="bollinger-bands-value"></td>
+				<td>
+					<input type="number" id="bollinger-bands-upper-value" placeholder="Upper Band">
+					<input type="number" id="bollinger-bands-lower-value" placeholder="Lower Band">
+				</td>
 			</tr>
 			<tr>
 				<td>Moving Average</td>
@@ -32,19 +35,31 @@
 			</tr>
 			<tr>
 				<td>MACD</td>
-				<td><input type="number" id="macd-value"></td>
+				<td>
+					<input type="number" id="macd-value" placeholder="MACD Line">
+					<input type="number" id="macd-signal-value" placeholder="Signal Line">
+				</td>
 			</tr>
 			<tr>
 				<td>Stochastic</td>
-				<td><input type="number" id="stochastic-value"></td>
+				<td>
+					<input type="number" id="stochastic-value" placeholder="Fast Stochastic">
+					<input type="number" id="stochastic-slow-value" placeholder="Slow Stochastic">
+				</td>
 			</tr>
 			<tr>
 				<td>Stochastic RSI</td>
-				<td><input type="number" id="stochastic-rsi-value"></td>
+				<td>
+					<input type="number" id="stochastic-rsi-value" placeholder="Fast Stochastic RSI">
+					<input type="number" id="stochastic-rsi-slow-value" placeholder="Slow Stochastic RSI">
+				</td>
 			</tr>
 			<tr>
 				<td>Ichimoku Cloud</td>
-				<td><input type="number" id="ichimoku-cloud-value"></td>
+				<td>
+					<input type="number" id="ichimoku-cloud-value" placeholder="Tenkan-sen">
+					<input type="number" id="ichimoku-cloud-base-value" placeholder="Kijun-sen">
+				</td>
 			</tr>
 			<tr>
 				<td>ATR</td>
