--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
 				<td>Bollinger Bands</td>
 				<td>
 					<input type="number" id="bollinger-bands-upper-value" placeholder="Upper Band">
+					<input type="number" id="bollinger-bands-middle-value" placeholder="Middle Band">
 					<input type="number" id="bollinger-bands-lower-value" placeholder="Lower Band">
+					<input type="number" id="bollinger-bands-signal-value" placeholder="Signal Line">
 				</td>
 			</tr>
 			<tr>
@@ -38,6 +40,7 @@
 				<td>
 					<input type="number" id="macd-value" placeholder="MACD Line">
 					<input type="number" id="macd-signal-value" placeholder="Signal Line">
+					<input type="number" id="macd-histogram-value" placeholder="Histogram">
 				</td>
 			</tr>
 			<tr>
@@ -57,8 +60,12 @@
 			<tr>
 				<td>Ichimoku Cloud</td>
 				<td>
-					<input type="number" id="ichimoku-cloud-value" placeholder="Tenkan-sen">
-					<input type="number" id="ichimoku-cloud-base-value" placeholder="Kijun-sen">
+					<input type="number" id="ichimoku-cloud-tenkan-sen-value" placeholder="Tenkan-sen">
+					<input type="number" id="ichimoku-cloud-kijun-sen-value" placeholder="Kijun-sen">
+					<input type="number" id="ichimoku-cloud-senkou-span-a-value" placeholder="Senkou Span A">
+					<input type="number" id="ichimoku-cloud-senkou-span-b-value" placeholder="Senkou Span B">
+					<input type="number" id="ichimoku-cloud-chikou-span-value" placeholder="Chikou Span">
+					<input type="number" id="ichimoku-cloud-lagging-span-value" placeholder="Lagging Span">
 				</td>
 			</tr>
 			<tr>
